@@ -1,5 +1,10 @@
 2022-07-07
 
+	* oauth2-sample.ini
+	  src/syl-auth-helper.c: added wildcard support for oauth2.ini.
+
+2022-07-07
+
 	* libsylph/imap.c
 	  src/inc.c
 	  src/send_message.c: don't ask password if OAuth2 is explicitly
